--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "jsdom": "^0.10.3",
-    "mysql": "~2.1.1"
+    "mysql": "~2.1.1",
+    "iconv-lite": "~0.2.11"
   }
 }
