--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "~1.9.1",
     "jsdom": "^0.10.3",
     "mysql": "~2.1.1",
-    "iconv-lite": "~0.2.11"
+    "iconv-lite": "~0.2.11",
+    "generic-pool": "~2.0.4"
   }
 }
