--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --reporter=spec lib/*.test.js"
+    "start": "node index.js",
+    "test": "mocha --reporter=spec -t 5000 lib/*.test.js"
   },
   "author": "Connor Weng",
   "license": "GPL v3",
