Modify CakeFile and package.json.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "node ./node_modules/mocha/bin/mocha --reporter=spec -t 100000 lib/*.test.js"
+    "start": "cake build && node index.js",
+    "test": "cake build && node ./node_modules/mocha/bin/mocha --reporter=spec -t 100000 lib/*.test.js"
   },
   "author": "Connor Weng",
   "license": "GPL v3",
