--- a/package.json
+++ b/package.json
@@ -15,17 +15,15 @@
   "license": "GPL v3",
   "devDependencies": {
     "chai": "~1.9.1",
-    "mysql": "~2.1.1",
-    "iconv-lite": "~0.2.11",
-    "generic-pool": "~2.0.4",
-    "crawler": "^0.2.5",
     "mocha": "^1.18.2",
-    "sinon": "^1.9.1",
-    "async": "~0.8.0",
-    "jquery": "^2.1.1",
-    "jsdom": "^0.10.5"
+    "sinon": "^1.9.1"
   },
   "dependencies": {
-    "phpjs": "^1.3.2"
+    "async": "~0.8.0",
+    "mysql": "~2.1.1",
+    "phpjs": "^1.3.2",
+    "crawler": "^0.2.5",
+    "jquery": "^2.1.1",
+    "jsdom": "^0.10.5"
   }
 }
