--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "mocha": "^1.18.2",
-    "sinon": "^1.9.1"
+    "sinon": "^1.9.1",
+    "memwatch": "^0.2.2"
   },
   "dependencies": {
     "async": "~0.8.0",
