--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "start": "cake build && node index.js",
-    "test": "export NODE_ENV=test && cake build && node ./node_modules/mocha/bin/mocha --reporter=spec -t 100000 lib/*.test.js",
-    "items": "cake build && node crawlItem.js"
+    "start": "coffee index.coffee",
+    "test": "export NODE_ENV=test && node ./node_modules/mocha/bin/mocha --compilers=coffee:coffee-script/register --reporter=spec",
+    "items": "coffee crawlItem.coffee"
   },
   "author": "Connor Weng",
   "license": "GPL v3",
@@ -21,10 +21,11 @@
   },
   "dependencies": {
     "async": "~0.8.0",
-    "mysql": "~2.1.1",
-    "phpjs": "^1.3.2",
+    "coffee-script": "^1.8.0",
     "crawler": "^0.2.5",
     "jquery": "^2.1.1",
-    "jsdom": "^0.10.5"
+    "jsdom": "^0.10.5",
+    "mysql": "~2.1.1",
+    "phpjs": "^1.3.2"
   }
 }
