--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "GPL v3",
   "devDependencies": {
     "chai": "~1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-sftp-deploy": "^0.2.1",
+    "memwatch": "^0.2.2",
     "mocha": "^1.18.2",
-    "sinon": "^1.9.1",
-    "memwatch": "^0.2.2"
+    "sinon": "^1.9.1"
   },
   "dependencies": {
     "async": "~0.8.0",
