--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "async": "~0.8.0",
     "coffee-script": "^1.8.0",
-    "crawler": "^0.2.5",
+    "crawler": "ConnorWeng/node-crawler#dev",
     "jquery": "^2.1.1",
     "jsdom": "^0.10.5",
     "mysql": "~2.1.1",
