--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "grunt": "^0.4.5",
-    "grunt-sftp-deploy": "^0.2.1",
     "memwatch": "^0.2.2",
     "mocha": "^1.18.2",
-    "sinon": "^1.9.1"
+    "sinon": "^1.9.1",
+    "grunt-ssh": "^0.12.0"
   },
   "dependencies": {
     "async": "~0.8.0",
