--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^2.1.1",
     "jsdom": "^0.10.5",
     "mysql": "felixge/node-mysql",
-    "phpjs": "^1.3.2"
+    "phpjs": "^1.3.2",
+    "q": "^1.1.2"
   }
 }
