--- a/package.json
+++ b/package.json
@@ -17,17 +17,16 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "grunt": "^0.4.5",
-    "memwatch": "^0.2.2",
-    "mocha": "^1.18.2",
-    "sinon": "^1.9.1",
-    "grunt-ssh": "^0.12.0"
+    "grunt-ssh": "^0.12.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.9.1"
   },
   "dependencies": {
     "async": "~0.8.0",
     "coffee-script": "^1.8.0",
     "crawler": "ConnorWeng/node-crawler#dev",
     "jquery": "^2.1.1",
-    "jsdom": "^0.10.5",
+    "jsdom": "^8.4.0",
     "mysql": "felixge/node-mysql",
     "phpjs": "^1.3.2",
     "q": "^1.1.2"
