--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdom": "^8.4.0",
     "mysql": "felixge/node-mysql",
     "phpjs": "^1.3.2",
-    "q": "^1.1.2"
+    "q": "^1.1.2",
+    "generic-pool": "2.1.1"
   }
 }
